@@ -1,6 +1,11 @@
 # ChangeLog for sci-libs/geos
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/geos/ChangeLog,v 1.6 2005/07/23 02:02:29 nerdboy Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/geos/ChangeLog,v 1.7 2005/08/27 13:35:32 nakano Exp $
+
+*geos-2.1.4 (27 Aug 2005)
+
+  27 Aug 2005; Masatomo Nakano <nakano@gentoo.org> +geos-2.1.4.ebuild:
+  Version bump.
 
   23 Jul 2005; Steve Arnold <nerdboy@gentoo.org> geos-2.1.1.ebuild,
   geos-2.1.2.ebuild:
